优化context 的支持